@@ -1,3 +1,5 @@
+2006/1/19 -- released version 20060119_trunk
+
 2006/1/18 -- released version 20060118_trunk
 
 2006/1/17 -- released version 20060117_trunk
